Limpieza y implementado el cambio de permisos automatico